--- a/Frontend/html/auth/account-activated.html
+++ b/Frontend/html/auth/account-activated.html
@@ -147,18 +147,71 @@
 
     <!-- Page JS -->
     <script>
-      let countdown = 5;
-      const countdownElement = document.getElementById('countdown');
-      
-      const timer = setInterval(() => {
-        countdown--;
-        countdownElement.textContent = countdown;
-        
-        if (countdown <= 0) {
-          clearInterval(timer);
-          window.location.href = 'login.html';
+      function verifyEmailIfToken() {
+        const params = new URLSearchParams(window.location.search);
+        const token = params.get('token');
+        if (token) {
+          document.querySelector('.card-body').innerHTML = '<div class="text-center py-5"><div class="spinner-border text-success" role="status"></div><p class="mt-3">Verifying your email, please wait...</p></div>';
+          fetch('http://localhost:5050/api/Auth/verify-email?token=' + encodeURIComponent(token))
+            .then(res => res.json().then(data => ({ ok: res.ok, data })))
+            .then(({ ok, data }) => {
+              if (ok) {
+                document.querySelector('.card-body').innerHTML = `
+                  <div class="text-center mb-4">
+                    <div class="avatar avatar-lg mx-auto mb-3">
+                      <div class="avatar-initial rounded-circle bg-success">
+                        <i class="ti ti-check fs-1 text-white"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <h4 class="mb-1 pt-2 text-center">Account Activated Successfully! 🎉</h4>
+                  <p class="text-center mb-4">Your account has been successfully activated. You can now sign in to your account and start using our services.</p>
+                  <div class="text-center mb-4"><p class="mb-2">Redirecting to login page in <span id='countdown' class='fw-bold text-primary'>5</span> seconds...</p></div>
+                  <a class="btn btn-primary w-100 mb-3" href="login.html">Go to Login Now</a>
+                  <p class="text-center mb-0"><small class="text-muted">If you are not redirected automatically, click the button above.</small></p>
+                `;
+                let countdown = 5;
+                const countdownElement = document.getElementById('countdown');
+                const timer = setInterval(() => {
+                  countdown--;
+                  countdownElement.textContent = countdown;
+                  if (countdown <= 0) {
+                    clearInterval(timer);
+                    window.location.href = 'login.html';
+                  }
+                }, 1000);
+              } else {
+                document.querySelector('.card-body').innerHTML = `
+                  <div class="text-center mb-4">
+                    <div class="avatar avatar-lg mx-auto mb-3">
+                      <div class="avatar-initial rounded-circle bg-danger">
+                        <i class="ti ti-x fs-1 text-white"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <h4 class="mb-1 pt-2 text-center text-danger">Activation Failed</h4>
+                  <p class="text-center mb-4">${data.message || 'Email verification failed. The link may be invalid or expired.'}</p>
+                  <a class="btn btn-primary w-100 mb-3" href="login.html">Go to Login</a>
+                `;
+              }
+            })
+            .catch(() => {
+              document.querySelector('.card-body').innerHTML = `
+                <div class="text-center mb-4">
+                  <div class="avatar avatar-lg mx-auto mb-3">
+                    <div class="avatar-initial rounded-circle bg-danger">
+                      <i class="ti ti-x fs-1 text-white"></i>
+                    </div>
+                  </div>
+                </div>
+                <h4 class="mb-1 pt-2 text-center text-danger">Activation Failed</h4>
+                <p class="text-center mb-4">An error occurred during verification. Please try again later.</p>
+                <a class="btn btn-primary w-100 mb-3" href="login.html">Go to Login</a>
+              `;
+            });
         }
-      }, 1000);
+      }
+      document.addEventListener('DOMContentLoaded', verifyEmailIfToken);
     </script>
   </body>
 </html> 
