[UPDATE]/Implement Google authentication flow, enhance email notifications for Google registration, and update frontend for improved user experience.

--- a/Frontend/html/auth/register.html
+++ b/Frontend/html/auth/register.html
@@ -95,6 +95,7 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
+                  <img src="../../assets/img/branding/logo-microservice.svg" alt="Microservice System Logo" style="height:40px;width:auto;">
                   <span class="app-brand-text demo text-body fw-bold ms-1">Microservice System</span>
                 </a>
               </div>
@@ -164,7 +165,7 @@
                   <i class="tf-icons fa-brands fa-facebook-f fs-5"></i>
                 </a>
 
-                <a href="javascript:;" class="btn btn-icon btn-label-google-plus me-3">
+                <a href="javascript:;" id="google-login-btn" class="btn btn-icon btn-label-google-plus me-3">
                   <i class="tf-icons fa-brands fa-google fs-5"></i>
                 </a>
 
