--- a/Frontend/html/auth/account-activated.html
+++ b/Frontend/html/auth/account-activated.html
@@ -89,6 +89,7 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
+                  <img src="../../assets/img/branding/logo-microservice.svg" alt="Microservice System Logo" style="height:40px;width:auto;">
                 <span class="app-brand-text demo text-body fw-bold ms-1">Microservice System</span>
               </a>
             </div>
