--- a/Frontend/html/auth/reset-password.html
+++ b/Frontend/html/auth/reset-password.html
@@ -95,6 +95,7 @@
                         fill="#7367F0" />
                     </svg>
                   </span> -->
+                  <img src="../../assets/img/branding/logo-microservice.svg" alt="Microservice System Logo" style="height:40px;width:auto;">
                   <span class="app-brand-text demo text-body fw-bold ms-1">Microservice System</span>
                 </a>
               </div>
