[ADD]/Integrate UserService into the microservices architecture, including Docker configuration, project structure, and initial implementation of user management features.

--- a/Frontend/html/auth/change-password.html
+++ b/Frontend/html/auth/change-password.html
@@ -13,7 +13,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Change Password - Microservice System</title>
+    <title>Change Password - iNFJZ System</title>
 
     <meta name="description" content="Change your account password" />
 
@@ -96,7 +96,7 @@
                     </svg>
                   </span> -->
                   <img src="../../assets/img/branding/logo-microservice.svg" alt="Microservice System Logo" style="height:40px;width:auto;">
-                  <span class="app-brand-text demo text-body fw-bold ms-1">Microservice System</span>
+                  <span class="app-brand-text demo text-body fw-bold ms-1">iNFJZ System</span>
                 </a>
               </div>
               <!-- /Logo -->
@@ -152,9 +152,9 @@
               </form>
 
               <p class="text-center">
-                <a href="../../html/dashboard.html">
+                <a href="../../html/admin/app-user-list.html">
                   <i class="ti ti-chevron-left scaleX-n1-rtl me-1"></i>
-                  Back to Dashboard
+                  Back to User Management
                 </a>
               </p>
             </div>
@@ -167,32 +167,22 @@
     <!-- / Content -->
 
     <!-- Core JS -->
-    <!-- build:js assets/vendor/js/core.js -->
-
     <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
     <script src="../../assets/vendor/libs/popper/popper.js"></script>
     <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18n.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
     <script src="../../assets/vendor/js/menu.js"></script>
 
-    <!-- endbuild -->
-
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+    <script src="../../assets/vendor/libs/select2/select2.js"></script>
 
     <!-- Main JS -->
     <script src="../../assets/js/main.js"></script>
 
-    <!-- Page JS -->
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/auth-forms.js"></script>
+    <script type="module" src="../../js/auth-utils.js"></script>
+    <script type="module" src="../../js/api.js"></script>
+    <script type="module" src="../../js/auth-forms.js"></script>
     <script>
       // Password visibility toggle
       document.querySelectorAll('.input-group-text').forEach(toggle => {
@@ -262,7 +252,7 @@
           
           if (response.ok) {
             alert('Password changed successfully!');
-            window.location.href = '../../html/dashboard.html';
+            window.location.href = '../../html/admin/app-user-list.html';
           } else {
             alert(result.message || 'Failed to change password');
           }
