--- a/Frontend/html/auth/reset-password.html
+++ b/Frontend/html/auth/reset-password.html
@@ -13,7 +13,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Reset Password - Microservice System</title>
+    <title>Reset Password - iNFJZ System</title>
 
     <meta name="description" content="" />
 
@@ -96,12 +96,12 @@
                     </svg>
                   </span> -->
                   <img src="../../assets/img/branding/logo-microservice.svg" alt="Microservice System Logo" style="height:40px;width:auto;">
-                  <span class="app-brand-text demo text-body fw-bold ms-1">Microservice System</span>
+                  <span class="app-brand-text demo text-body fw-bold ms-1">iNFJZ System</span>
                 </a>
               </div>
               <!-- /Logo -->
               <h4 class="mb-1 pt-2">Reset Password 🔒</h4>
-              <p class="mb-4">for <span class="fw-medium" id="resetEmail">Loading...</span></p>
+              <p class="mb-4">for <span class="fw-medium" id="reset-password-email">Loading...</span></p>
               <form id="reset-password-form">
                 <div class="mb-3 form-password-toggle">
                   <label class="form-label" for="reset-password-password">New Password</label>
@@ -148,49 +148,21 @@
     <!-- / Content -->
 
     <!-- Core JS -->
-    <!-- build:js assets/vendor/js/core.js -->
-
     <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
     <script src="../../assets/vendor/libs/popper/popper.js"></script>
     <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18n.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
     <script src="../../assets/vendor/js/menu.js"></script>
 
-    <!-- endbuild -->
-
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+    <script src="../../assets/vendor/libs/select2/select2.js"></script>
 
     <!-- Main JS -->
     <script src="../../assets/js/main.js"></script>
 
-    <!-- Page JS -->
-    <script src="../../assets/js/pages-auth.js"></script>
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/auth-forms.js"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const resetEmailElement = document.getElementById('resetEmail');
-        const urlParams = new URLSearchParams(window.location.search);
-        const emailFromUrl = urlParams.get('email');
-        const emailFromStorage = localStorage.getItem('pendingResetEmail');
-        
-        if (emailFromUrl) {
-          resetEmailElement.textContent = emailFromUrl;
-        } else if (emailFromStorage) {
-          resetEmailElement.textContent = emailFromStorage;
-          localStorage.removeItem('pendingResetEmail');
-        } else {
-          resetEmailElement.textContent = 'Email not available';
-        }
-      });
-    </script>
+    <script type="module" src="../../js/auth-utils.js"></script>
+    <script type="module" src="../../js/api.js"></script>
+    <script type="module" src="../../js/auth-forms.js"></script>
   </body>
 </html>
