--- a/Frontend/html/admin/app-user-list.html
+++ b/Frontend/html/admin/app-user-list.html
@@ -40,6 +40,10 @@
     <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
     <link rel="stylesheet" href="../../assets/vendor/libs/select2/select2.css" />
+    
+    <!-- Toastr CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link rel="stylesheet" href="../../assets/css/styles.css" />
 
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
@@ -189,33 +193,78 @@
               <!-- Users List Table -->
               <div class="card">
                 <div class="card-header">
-                  <h5 class="card-title mb-3">User List</h5>
+                  <h5 class="card-title mb-3">User Management</h5>
+                  <ul class="nav nav-tabs card-header-tabs" id="userTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link active" id="active-users-tab" data-bs-toggle="tab" data-bs-target="#active-users" type="button" role="tab" aria-controls="active-users" aria-selected="true">
+                        Active Users
+                      </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="deleted-users-tab" data-bs-toggle="tab" data-bs-target="#deleted-users" type="button" role="tab" aria-controls="deleted-users" aria-selected="false">
+                        Deleted Users
+                      </button>
+                    </li>
+                  </ul>
                 </div>
                 <div class="card-body">
-                  <div class="mb-3">
-                    <input type="text" id="user-search-input" class="form-control" placeholder="Search users by username, email, or full name..." />
+                  <div class="tab-content" id="userTabsContent">
+                    <!-- Active Users Tab -->
+                    <div class="tab-pane fade show active" id="active-users" role="tabpanel" aria-labelledby="active-users-tab">
+                      <div class="mb-3">
+                        <input type="text" id="user-search-input" class="form-control" placeholder="Search users by username, email, or full name..." />
+                      </div>
+                      <div id="user-stats-container" class="mb-3"></div>
+                      <div class="table-responsive">
+                        <table id="user-table" class="table table-bordered">
+                          <thead>
+                            <tr>
+                              <th>ID</th>
+                              <th>Username</th>
+                              <th>Full Name</th>
+                              <th>Email</th>
+                              <th>Phone</th>
+                              <th>Status</th>
+                              <th>Last Login</th>
+                              <th>Actions</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <!-- JS sẽ render user vào đây -->
+                          </tbody>
+                        </table>
+                      </div>
+                      <div id="pagination-container" class="mt-3"></div>
+                    </div>
+                    
+                    <!-- Deleted Users Tab -->
+                    <div class="tab-pane fade" id="deleted-users" role="tabpanel" aria-labelledby="deleted-users-tab">
+                      <div class="mb-3">
+                        <input type="text" id="deleted-user-search-input" class="form-control" placeholder="Search deleted users by username, email, or full name..." />
+                      </div>
+                      <div id="deleted-user-stats-container" class="mb-3"></div>
+                      <div class="table-responsive">
+                        <table id="deleted-user-table" class="table table-bordered">
+                          <thead>
+                            <tr>
+                              <th>ID</th>
+                              <th>Username</th>
+                              <th>Full Name</th>
+                              <th>Email</th>
+                              <th>Phone</th>
+                              <th>Status</th>
+                              <th>Deleted At</th>
+                              <th>Actions</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <!-- JS sẽ render deleted users vào đây -->
+                          </tbody>
+                        </table>
+                      </div>
+                      <div id="deleted-pagination-container" class="mt-3"></div>
+                    </div>
                   </div>
-                  <div id="user-stats-container" class="mb-3"></div>
-                  <div class="table-responsive">
-                    <table id="user-table" class="table table-bordered">
-                      <thead>
-                        <tr>
-                          <th>ID</th>
-                          <th>Username</th>
-                          <th>Full Name</th>
-                          <th>Email</th>
-                          <th>Phone</th>
-                          <th>Status</th>
-                          <th>Last Login</th>
-                          <th>Actions</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <!-- JS sẽ render user vào đây -->
-                      </tbody>
-                    </table>
-                  </div>
-                  <div id="pagination-container" class="mt-3"></div>
                 </div>
               </div>
               <!-- Offcanvas to add new user -->
@@ -375,6 +424,8 @@
 
     <!-- Vendors JS -->
     <script src="../../assets/vendor/libs/select2/select2.js"></script>
+    <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
 
     <!-- Main JS -->
     <script src="../../assets/js/main.js"></script>
@@ -384,8 +435,8 @@
     <script type="module" src="../../js/app.js"></script>
 
     <!-- Edit User Modal -->
-    <div id="edit-user-modal" class="modal" tabindex="-1" style="display:none; position:fixed; z-index:1050; left:0; top:0; width:100vw; height:100vh; overflow:auto; background:rgba(0,0,0,0.5);">
-      <div class="modal-dialog" style="max-width:500px; margin:5% auto; background:#fff; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <div id="edit-user-modal" class="modal" tabindex="-1" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100vw; height:100vh; overflow:auto; background:rgba(0,0,0,0.5);">
+      <div class="modal-dialog" style="max-width:500px; margin:5% auto; background:#fff; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.2); position:relative;">
         <form id="edit-user-form" style="padding:24px;">
           <input type="hidden" id="edit-user-id" />
           <div class="mb-3">
@@ -447,5 +498,7 @@
       </div>
     </div>
     <!-- End User Detail Modal -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </body>
 </html>
