--- a/Frontend/html/auth/change-password.html
+++ b/Frontend/html/auth/change-password.html
@@ -68,7 +68,7 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center mb-4 mt-2">
-                <a href="index.html" class="app-brand-link gap-2">
+                <a href="/" class="app-brand-link gap-2">
                   <!-- <span class="app-brand-logo demo">
                     <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -152,7 +152,7 @@
               </form>
 
               <p class="text-center">
-                <a href="../../html/admin/app-user-list.html">
+                <a href="../../html/admin/user-list.html">
                   <i class="ti ti-chevron-left scaleX-n1-rtl me-1"></i>
                   Back to User Management
                 </a>
@@ -252,7 +252,7 @@
           
           if (response.ok) {
             alert('Password changed successfully!');
-            window.location.href = '../../html/admin/app-user-list.html';
+            window.location.href = '../../html/admin/user-list.html';
           } else {
             alert(result.message || 'Failed to change password');
           }
