--- a/Frontend/html/auth/reset-password.html
+++ b/Frontend/html/auth/reset-password.html
@@ -68,7 +68,7 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center mb-4 mt-2">
-                <a href="index.html" class="app-brand-link gap-2">
+                <a href="/" class="app-brand-link gap-2">
                   <!-- <span class="app-brand-logo demo">
                     <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -132,7 +132,7 @@
                 <button class="btn btn-primary d-grid w-100 mb-3">Set new password</button>
 
                 <div class="text-center">
-                  <a href="javascript:void(0)" onclick="window.location.href='/login'">
+                  <a href="javascript:void(0)" onclick="window.location.href='/'">
                     <i class="ti ti-chevron-left scaleX-n1-rtl"></i>
                     Back to login
                   </a>
