--- a/Frontend/html/auth/register.html
+++ b/Frontend/html/auth/register.html
@@ -68,7 +68,7 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center mb-4 mt-2">
-                <a href="index.html" class="app-brand-link gap-2">
+                <a href="/" class="app-brand-link gap-2">
                   <!-- <span class="app-brand-logo demo">
                     <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -151,7 +151,7 @@
 
               <p class="text-center">
                 <span>Already have an account?</span>
-                <a href="javascript:void(0)" onclick="window.location.href='/login'">
+                <a href="javascript:void(0)" onclick="window.location.href='/'">
                   <span>Sign in instead</span>
                 </a>
               </p>
