--- a/Frontend/html/auth/verify-email.html
+++ b/Frontend/html/auth/verify-email.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <!-- Logo -->
             <div class="app-brand justify-content-center mb-4 mt-2">
-              <a href="index.html" class="app-brand-link gap-2">
+              <a href="/" class="app-brand-link gap-2">
                                   <!-- <span class="app-brand-logo demo">
                     <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -98,7 +98,7 @@
             <p class="text-start mb-4">
               Your account has been created successfully! A verification email has been sent to your email address: <span id="userEmail" class="fw-medium">Loading...</span>. Please check your email and click the verification link to activate your account.
             </p>
-            <a class="btn btn-primary w-100 mb-3" href="login.html">Go to Login</a>
+            <a class="btn btn-primary w-100 mb-3" href="/">Go to Login</a>
             <p class="text-center mb-0">
               Didn't receive the email?
               <a href="javascript:void(0);" id="resendLink">Resend Verification Email</a>
